# whitelist_editor

./: Cargo.toml  README.md  SPECIFICATION.md  build-releases.sh  build.rs
.agent/workflows/: i.md  p.md
assets/linux/: com.github.vlisivka.WhitelistEditor.desktop
plan/: PLAN.md
src/: app.rs  lease_parser.rs  main.rs  mikrotik_data.rs  ssh_client.rs
