[package]
name = "whitelist_editor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.34", features = ["persistence"] }
egui = {version = "0.34", features = ["serde"] }
egui_extras = { version = "0.34" }
ssh-rs = "0.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ipnet = "2.11"
